--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/gsap": "^1.20.2",
     "gsap": "^3.14.2",
     "lenis": "^1.3.17",
+    "mongodb": "^7.0.0",
     "next": "^15.4.10",
     "payload": "^3.72.0",
     "react": "19.2.3",
